--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,15 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">313</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">1,228</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.qa.test.GetAPItest</td><td><a href="#m0">getTest</a></td><td rowspan="1">1618424392466</td><td rowspan="1">272</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.qa.test.GETAllEmployeesDataTest</td><td><a href="#m0">responseStatusTest</a></td><td rowspan="1">1618890397750</td><td rowspan="1">16</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.qa.test.GETAllEmployeesDataTest</td><td><a href="#m1">GETAllEmployeesData</a></td><td rowspan="1">1618890396574</td><td rowspan="1">1169</td></tr><tr class="passedeven"><td><a href="#m2">statusCodeTest</a></td><td rowspan="1">1618890397770</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.qa.test.GetAPItest#getTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalArgumentException: Illegal character in scheme name at index 0: &quot;https://reqres.in/&quot;&quot;api/users/&quot;
-	at java.base/java.net.URI.create(URI.java:906)
-	at org.apache.http.client.methods.HttpGet.&lt;init&gt;(HttpGet.java:66)
-	at com.qa.client.RESTClient.get(RESTClient.java:20)
-	at com.qa.test.GetAPItest.getTest(GetAPItest.java:30)
+<h2>Default test</h2><h3 id="m0">com.qa.test.GETAllEmployeesDataTest#responseStatusTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.json.JSONException: A JSONObject text must begin with &apos;{&apos; at 1 [character 2 line 1]
+	at org.json.JSONTokener.syntaxError(JSONTokener.java:507)
+	at org.json.JSONObject.&lt;init&gt;(JSONObject.java:222)
+	at org.json.JSONObject.&lt;init&gt;(JSONObject.java:406)
+	at com.qa.test.GETAllEmployeesDataTest.responseStatusTest(GETAllEmployeesDataTest.java:62)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -46,14 +46,8 @@
 	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-Caused by: java.net.URISyntaxException: Illegal character in scheme name at index 0: &quot;https://reqres.in/&quot;&quot;api/users/&quot;
-	at java.base/java.net.URI$Parser.fail(URI.java:2938)
-	at java.base/java.net.URI$Parser.checkChars(URI.java:3109)
-	at java.base/java.net.URI$Parser.checkChar(URI.java:3119)
-	at java.base/java.net.URI$Parser.parse(URI.java:3134)
-	at java.base/java.net.URI.&lt;init&gt;(URI.java:623)
-	at java.base/java.net.URI.create(URI.java:904)
-	... 31 more
 </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.qa.test.GETAllEmployeesDataTest#GETAllEmployeesData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.qa.test.GETAllEmployeesDataTest#statusCodeTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
