--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\User\AppData\Local\Temp\testng-eclipse--1603715593\testng-customsuite.xml</span>
+                    <span>C:\Users\User\AppData\Local\Temp\testng-eclipse-1426074938\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -104,10 +104,29 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.qa.test.GetAPItest" class="method navigator-link" hash-for-method="getTest">getTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.qa.test.GETAllEmployeesDataTest" class="method navigator-link" hash-for-method="responseStatusTest">responseStatusTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
+                  </li>
+                  <li>
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
+                    </span>
+                    <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.qa.test.GETAllEmployeesDataTest" class="method navigator-link" hash-for-method="GETAllEmployeesData">GETAllEmployeesData</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.qa.test.GETAllEmployeesDataTest" class="method navigator-link" hash-for-method="statusCodeTest">statusCodeTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -122,19 +141,19 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">com.qa.test.GetAPItest</span>
+              <span class="class-name">com.qa.test.GETAllEmployeesDataTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="getTest">
-                  </a> <!-- getTest -->
-                  <span class="method-name">getTest</span>
-                  <div class="stack-trace">java.lang.IllegalArgumentException: Illegal character in scheme name at index 0: &quot;https://reqres.in/&quot;&quot;api/users/&quot;
-	at java.base/java.net.URI.create(URI.java:906)
-	at org.apache.http.client.methods.HttpGet.&lt;init&gt;(HttpGet.java:66)
-	at com.qa.client.RESTClient.get(RESTClient.java:20)
-	at com.qa.test.GetAPItest.getTest(GetAPItest.java:30)
+                  <a name="responseStatusTest">
+                  </a> <!-- responseStatusTest -->
+                  <span class="method-name">responseStatusTest</span>
+                  <div class="stack-trace">org.json.JSONException: A JSONObject text must begin with &apos;{&apos; at 1 [character 2 line 1]
+	at org.json.JSONTokener.syntaxError(JSONTokener.java:507)
+	at org.json.JSONObject.&lt;init&gt;(JSONObject.java:222)
+	at org.json.JSONObject.&lt;init&gt;(JSONObject.java:406)
+	at com.qa.test.GETAllEmployeesDataTest.responseStatusTest(GETAllEmployeesDataTest.java:62)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -163,24 +182,38 @@
 	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-Caused by: java.net.URISyntaxException: Illegal character in scheme name at index 0: &quot;https://reqres.in/&quot;&quot;api/users/&quot;
-	at java.base/java.net.URI$Parser.fail(URI.java:2938)
-	at java.base/java.net.URI$Parser.checkChars(URI.java:3109)
-	at java.base/java.net.URI$Parser.checkChar(URI.java:3119)
-	at java.base/java.net.URI$Parser.parse(URI.java:3134)
-	at java.base/java.net.URI.&lt;init&gt;(URI.java:623)
-	at java.base/java.net.URI.create(URI.java:904)
-	... 31 more
 
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-failed -->
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.qa.test.GETAllEmployeesDataTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="GETAllEmployeesData">
+                  </a> <!-- GETAllEmployeesData -->
+                  <span class="method-name">GETAllEmployeesData</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="statusCodeTest">
+                  </a> <!-- statusCodeTest -->
+                  <span class="method-name">statusCodeTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\User\AppData\Local\Temp\testng-eclipse--1603715593\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\User\AppData\Local\Temp\testng-eclipse-1426074938\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -189,7 +222,7 @@ Caused by: java.net.URISyntaxException: Illegal character in scheme name at inde
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.qa.test.GetAPItest&quot;/&gt;
+      &lt;class name=&quot;com.qa.test.GETAllEmployeesDataTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -229,16 +262,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getTest')
-data.setCell(0, 2, 'com.qa.test.GetAPItest')
-data.setCell(0, 3, 272);
+data.setCell(0, 1, 'GETAllEmployeesData')
+data.setCell(0, 2, 'com.qa.test.GETAllEmployeesDataTest')
+data.setCell(0, 3, 1169);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'responseStatusTest')
+data.setCell(1, 2, 'com.qa.test.GETAllEmployeesDataTest')
+data.setCell(1, 3, 16);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'statusCodeTest')
+data.setCell(2, 2, 'com.qa.test.GETAllEmployeesDataTest')
+data.setCell(2, 3, 1);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 272 ms</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -264,16 +305,24 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.qa.test.GetAPItest</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
+              <div class="chronological-class-name">com.qa.test.GETAllEmployeesDataTest</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">setUpGETAllEmployeesDataAPI</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
+              </div> <!-- configuration-test before -->
+              <div class="test-method">
+                <span class="method-name">GETAllEmployeesData</span>
+                <span class="method-start">24 ms</span>
+              </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">getTest</span>
-                <span class="method-start">7 ms</span>
+                <span class="method-name">responseStatusTest</span>
+                <span class="method-start">1200 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">statusCodeTest</span>
+                <span class="method-start">1220 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
