--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c9d689">  <td>21/04/14 13:19:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GetAPItest.setUp()[pri:0, instance:com.qa.test.GetAPItest@ba54932]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@997055773</td>   <td></td> </tr>
-<tr bgcolor="c9d689">  <td>21/04/14 13:19:52</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAPItest.getTest()[pri:0, instance:com.qa.test.GetAPItest@ba54932]">getTest</td> 
-  <td>main@997055773</td>   <td></td> </tr>
+<tr bgcolor="c9d689">  <td>21/04/19 22:46:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GETAllEmployeesDataTest.GETAllEmployeesData()[pri:0, instance:com.qa.test.GETAllEmployeesDataTest@2abf4075]">GETAllEmployeesData</td> 
+  <td>main@263885523</td>   <td></td> </tr>
+<tr bgcolor="c9d689">  <td>21/04/19 22:46:37</td>   <td>1196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GETAllEmployeesDataTest.statusCodeTest()[pri:0, instance:com.qa.test.GETAllEmployeesDataTest@2abf4075]">statusCodeTest</td> 
+  <td>main@263885523</td>   <td></td> </tr>
+<tr bgcolor="c9d689">  <td>21/04/19 22:46:36</td>   <td>-21</td> <td>&nbsp;</td><td title="&gt;&gt;GETAllEmployeesDataTest.setUpGETAllEmployeesDataAPI()[pri:0, instance:com.qa.test.GETAllEmployeesDataTest@2abf4075]">&gt;&gt;setUpGETAllEmployeesDataAPI</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263885523</td>   <td></td> </tr>
+<tr bgcolor="c9d689">  <td>21/04/19 22:46:37</td>   <td>1176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GETAllEmployeesDataTest.responseStatusTest()[pri:0, instance:com.qa.test.GETAllEmployeesDataTest@2abf4075]">responseStatusTest</td> 
+  <td>main@263885523</td>   <td></td> </tr>
 </table>
